# media_tools

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix  media_tools-0.1.0-beta5-x86_64.AppImage
.github/workflows/: build_linux.yml  build_release.yml  release.yml
src/: lib.rs  main.rs
src/audio/: boost.rs  cli.rs  convert.rs  mod.rs  speed.rs  utils.rs
src/audio/encoders/: core.rs  encoder.rs  error.rs  errors.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
src/cli/: cli.rs
src/image/: blur.rs  brightness.rs  cli.rs  convert.rs  flip.rs  mod.rs  resize.rs  rotate.rs  utils.rs  watermark.rs
src/internal/: utils.rs
src/video/: cli.rs  convert.rs  flip.rs  mod.rs  mute.rs  resize.rs  rotate.rs  utils.rs  watermark.rs
src/video/ffmpeg/: ffmpeg.rs  ffprobe.rs  mod.rs
