[package]
name = "media_tools"
version = "0.1.0"
edition = "2021"
author="Nuno Antunes"
description = "A simple tool to manipulate media files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
image = "0.24.6"
imageproc = "0.23.0"
