[package]
name = "media_tools"
version = "0.1.0-beta8"
edition = "2021"
authors = ["Nuno Antunes"]
description = "A simple tool to manipulate media files"

# Needed to create AppImage
[[bin]]
name = "media_tools"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
hound = "3.5.0"
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.17"
mp3lame-encoder = "0.1.2"
serde_json = "1.0.96"
symphonia = { version = "0.5.2", features = ["mp3", "wav"] }
thiserror = "1.0.40"

# Debian package metadata
[package.metadata.deb]
depends = "$auto, ffmpeg (>= 4.2.2)"
